--- a/web/scss/_clients.scss
+++ b/web/scss/_clients.scss
@@ -186,10 +186,10 @@
     }
 
     .vote-wrap {
-      min-height: 8.75em;
+      min-height: 8.5em;
 
       .vote {
-        padding: 0.5em 0;
+        padding: 0.25em 0;
         font-size: 4em;
       }
     }
